<resources>
    <string name="app_name">Studygroup</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="submit">Submit</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="welcome_to_virtual_studygroup">Welcome to Studygroup</string>
    <string name="welcom_text">Create your free account or log in if you are not a new user</string>
    <string name="registration">Registration</string>
    <string name="lets_get_you_set_up">Lets get you set up</string>
    <string name="register_as">Register as?</string>
    <string name="identification">Identification</string>
    <string name="user_identification">User Identification</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="just_a_few_more">Just a few more . . .</string>
    <string name="qualification">Qualification</string>
    <string name="department">Department</string>
    <string name="manage_courses">Manage Courses</string>
    <string name="add_new_course">Add New Course</string>
    <string name="subscribe_to_course">Subscribe to course</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out">Log Out</string>
    <string name="course_title">Course Title</string>
    <string name="sub_title">Sub-Title</string>
    <string name="course_brief">Course Brief</string>
    <string name="create_course">Create Course</string>
    <string name="search_for_course">Search Course Codes . . .</string>
    <string name="course_info">Course Info</string>
    <string name="modules">Modules</string>
    <string name="assignments">Assignments</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="assessment">Assessment</string>
    <string name="module_title">Module Title</string>
    <string name="module_description">Module Description</string>
    <string name="add_module">Add Module</string>
    <string name="add_module_video">Add Module Video</string>
    <string name="click_icon_to_add_video_material">Click icon to add video material</string>
    <string name="click_icon_to_add_file_material">Click icon to add file</string>
    <string name="course_modules">Course Modules</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="assignment_score">Assignment Score</string>
    <string name="score">Score</string>
    <string name="deadline">Deadline</string>
    <string name="add_assignment_file">Add Assignment File</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="course_assignments">Course Assignments</string>
    <string name="module_data">Module Data</string>
    <string name="write_a_contribution">Write a contribution . . .</string>
    <string name="u_take_assessment_u"><u>Take Assessment</u></string>
    <string name="view_results"><u>View Results</u></string>
    <string name="questionnaire_title"><b>Please Fill the Form</b></string>
    <string name="number1">1)</string>
    <string name="number2">2)</string>
    <string name="number3">3)</string>
    <string name="number4">4)</string>
    <string name="number5">5)</string>
    <string name="firstQuestion">1. Difficulty understanding when reading, particularly novels, magazines, newspapers, text-books, poetry?</string>
    <string name="secondQuestion">2. Do you have difficulty remembering information from reading, e.g. simple facts, names, dates, times, places?</string>
    <string name="thirdQuestion">3. Difficulty remembering information from listening, e.g. taking messages in a phone conversation?</string>
    <string name="fourthQuestion">4. Do you struggles when describing and explaining things in detail, e.g. stories or events?</string>
    <string name="fifthQuestion">5. You can concentrate only on one thing at a time, e.g. cannot write and listen at the same time?</string>
    <string name="firstQuestionFirstOption">Yes</string>
    <string name="firstQuestionSecondOption">Often</string>
    <string name="firstQuestionThirdOption">Sometimes</string>
    <string name="firstQuestionFourthOption">Not Often</string>
    <string name="firstQuestionFifthOption">No</string>
    <string name="secondQuestionFirstOption">Yes</string>
    <string name="secondQuestionSecondOption">Often</string>
    <string name="secondQuestionThirdOption">Sometimes</string>
    <string name="secondQuestionFourthOption">Not Often</string>
    <string name="secondQuestionFifthOption">No</string>
    <string name="thirdQuestionFirstOption">Yes</string>
    <string name="thirdQuestionSecondOption">Often</string>
    <string name="thirdQuestionThirdOption">Sometimes</string>
    <string name="thirdQuestionFourthOption">Not Often</string>
    <string name="thirdQuestionFifthOption">No</string>
    <string name="fourthQuestionFirstOption">Yes</string>
    <string name="fourthQuestionSecondOption">Often</string>
    <string name="fourthQuestionThirdOption">Sometimes</string>
    <string name="fourthQuestionFourthOption">Not Often</string>
    <string name="fourthQuestionFifthOption">No</string>
    <string name="fifthQuestionFirstOption">Yes</string>
    <string name="fifthQuestionSecondOption">Often</string>
    <string name="fifthQuestionThirdOption">Sometimes</string>
    <string name="fifthQuestionFourthOption">Not Often</string>
    <string name="fifthQuestionFifthOption">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>