<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteBack"
    tools:context=".OnBoardingChoice">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/backButton"
        android:src="@drawable/ic_back"
        android:layout_marginStart="26dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttonsLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="26dp">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_solid_black_ripple"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_ring_black_ripple"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/welcomeText"
        android:text="@string/welcom_text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintStart_toStartOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="@+id/buttonsLayout"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/welcomeTitle"
        android:text="@string/welcome_to_virtual_studygroup"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="@+id/buttonsLayout"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintStart_toStartOf="@+id/welcomeTitle"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>