<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteBack"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:id="@+id/backButton"
            android:src="@drawable/ic_back"
            android:layout_marginStart="26dp"
            android:contentDescription="@string/app_name"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identification"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_marginStart="2dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edt_ring_black"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/transparentBlack"
                android:hint="@string/user_identification"
                android:id="@+id/userIdentification"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_marginStart="2dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edt_ring_black"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/transparentBlack"
                android:hint="@string/password"
                android:id="@+id/userPassword"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/btn_solid_green_ripple"
            android:id="@+id/loginBtn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:id="@+id/loginText"/>

            <com.wang.avi.AVLoadingIndicatorView
                style="@style/AVLoadingIndicatorView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                app:indicatorColor="@color/white"
                android:visibility="gone"
                app:indicatorName="LineSpinFadeLoaderIndicator"
                android:id="@+id/loginProgress"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You're new?"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="14sp"
                android:textColor="@color/themeDarkGreen"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:id="@+id/registerLink"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>